# consulrs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  typos.toml
.github/workflows/: ci.yml
consulrs_derive/: Cargo.toml
consulrs_derive/src/: error.rs  lib.rs
examples/: election.rs
src/: api.rs  catalog.rs  check.rs  client.rs  error.rs  health.rs  kv.rs  lib.rs  service.rs  session.rs  snapshot.rs
src/api/: catalog.rs  features.rs  health.rs
src/api/catalog/: common.rs  requests.rs  responses.rs
src/api/check/: common.rs  requests.rs  responses.rs
src/api/connect/: common.rs  responses.rs
src/api/health/: common.rs  requests.rs
src/api/kv/: common.rs  requests.rs  responses.rs
src/api/service/: common.rs  requests.rs  responses.rs
src/api/session/: common.rs  requests.rs  responses.rs
src/api/snapshot/: requests.rs
tests/: catalog.rs  check.rs  common.rs  kv.rs  service.rs  session.rs  snapshot.rs
