[package]
name = "consulrs"
version = "0.1.0"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
description = "An asynchronous Rust client library for the Hashicorp Consul API."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmgilman/consulrs"
keywords = ["Consul", "API", "Client", "Hashicorp"]
edition = "2018"

[dependencies]
async-trait = "0.1.51"
bytes = "1.1.0"
derive_builder = "0.10.2"
http = "0.2.5"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
rustify = "0.4.4"
serde_json = "1.0.66"
thiserror = "1.0.29"
tracing = "0.1.28"
url = "2.2.2"
