[package]
name = "consulrs"
version = "0.1.0"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
description = "An asynchronous Rust client library for the Hashicorp Consul API."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmgilman/consulrs"
keywords = ["Consul", "API", "Client", "Hashicorp"]
edition = "2018"

[workspace]
members = [
    "consulrs_derive",
]

[dependencies]
async-trait = "0.1.51"
base64 = "0.13.0"
consulrs_derive = { version = "0.1.0", path = "consulrs_derive" }
derive_builder = "0.10.2"
http = "0.2.5"
reqwest = { version = "0.11.4", default-features = false }
rustify = "0.5.2"
rustify_derive = "0.5.2"
serde = "1.0.130"
serde_json = "1.0.66"
serde_with = "1.10.0"
thiserror = "1.0.29"
tracing = "0.1.28"
url = "2.2.2"

[dev-dependencies]
dockertest-server = { version = "0.1.4", features=["hashi"] }
env_logger = "0.9.0"
futures = "0.3.17"
test-log = { version = "0.2.8", features = ["trace"] }
tokio = { version = "1.12.0", features = ["full"] }
tokio-test = "0.4.2"
tracing-subscriber = {version = "0.2.17", default-features = false, features = ["env-filter", "fmt"]}

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
