[package]
name = "consulrs"
version = "0.1.0"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
description = "An asynchronous Rust client library for the Hashicorp Consul API."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmgilman/consulrs"
keywords = ["Consul", "API", "Client", "Hashicorp"]
edition = "2018"

[workspace]
members = [
    "consulrs_derive",
]

[dependencies]
async-trait = "0.1.64"
base64 = "0.21.0"
consulrs_derive = { version = "0.1.0", path = "consulrs_derive" }
derive_builder = "0.12.0"
http = "0.2.8"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
rustify = "0.5.3"
rustify_derive = "0.5.2"
serde = "1.0.152"
serde_json = "1.0.93"
serde_with = "2.2.0"
thiserror = "1.0.38"
tracing = "0.1.37"
url = "2.3.1"

[dev-dependencies]
dockertest-server = { version = "0.1.4", features=["hashi"] }
env_logger = "0.10.0"
futures = "0.3.26"
test-log = { version = "0.2.11", features = ["trace"] }
tokio = { version = "1.25.0", features = ["full"] }
tokio-test = "0.4.2"
tracing-subscriber = {version = "0.3.16", default-features = false, features = ["env-filter", "fmt"]}
